<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MCE Network</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="dash_name">All Notices</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="login_big">LOGIN</string>
    <string name="email">Email</string>
    <string name="emailoruname">Username or Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="No_Account">I don\'t have account. Register Me!</string>
    <string name="register_big">REGISTER</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="already_registered">Already registered. Login Me!</string>
    <string name="title_activity_notice">Notice</string>

    <string-array name="year_array">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
    </string-array>

    <string-array name="target_array">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
        <item>Faculty</item>
        <item>All</item>
    </string-array>

    <string name="date">"Date: "</string>
    <string name="year">Year</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="profile">Profile</string>
    <string name="classmates">Classmates</string>
    <string name="faculty">Faculty</string>
    <string name="posts">Posts</string>
    <string name="research">Research</string>
    <string name="addNewPost">Add New Post</string>
    <string name="addPost">Add Post</string>
    <string name="title">Post Title</string>
    <string name="body">Post Body</string>
    <string name="target">Post For</string>
    <string name="post">Post</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_research">Research</string>
    <string name="title_activity_post_add">Add New Post</string>
    <string name="title_activity_chat">Conversation</string>
    <string name="send">>></string>
    <string name="start_conversation">Start Conversation</string>
    <string name="research_header">Research:</string>
    <string name="abstract_header">Abstract:</string>

</resources>