<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/addNewPost"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/title"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:visibility="gone"
            android:id="@+id/spinner_text"
            android:text="@string/target" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:visibility="gone"
            android:entries="@array/target_array"
            android:drawSelectorOnTop="true"
            android:id="@+id/target" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/body" />

        <EditText
            android:id="@+id/body"
            android:layout_width="fill_parent"
            android:singleLine="false"
            android:gravity="top"
            android:lines="5"
            android:layout_height="wrap_content" />

       <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
           android:onClick="buttonClick"
            android:text="@string/post" />

    </LinearLayout>

</ScrollView>